// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > Snapshots > should apply 'border' appearance classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086 _checkbox--border_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'critical' skin classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--critical_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'default' appearance classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'lg' size classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--lg_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'md' size classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'primary' skin classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'sm' size classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--sm_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should apply 'success' skin classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--success_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should render additional classes 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086 other-class"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should render loading 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--loading_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <div
        class="_spinner_c80566 _spinner--white_c80566 _spinner--xs_c80566 _checkbox__spinner_8d7086"
      >
        <svg
          class="_spinner__svg_c80566"
          fill="currentColor"
          height="20"
          viewBox="0 0 48 48"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="24"
            cy="4"
            r="4"
          />
          <circle
            cx="12.19"
            cy="7.86"
            r="3.7"
          />
          <circle
            cx="5.02"
            cy="17.68"
            r="3.4"
          />
          <circle
            cx="5.02"
            cy="30.32"
            r="3.1"
          />
          <circle
            cx="12.19"
            cy="40.14"
            r="2.8"
          />
          <circle
            cx="24"
            cy="44"
            r="2.5"
          />
          <circle
            cx="35.81"
            cy="40.14"
            r="2.2"
          />
          <circle
            cx="42.98"
            cy="30.32"
            r="1.9"
          />
          <circle
            cx="42.98"
            cy="17.68"
            r="1.6"
          />
          <circle
            cx="35.81"
            cy="7.86"
            r="1.3"
          />
        </svg>
      </div>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;

exports[`Checkbox > Snapshots > should renders default component 1`] = `
<div>
  <label
    class="_checkbox_8d7086 _checkbox--md_8d7086 _checkbox--primary_8d7086"
  >
    <input
      class="_checkbox__input_8d7086"
      type="checkbox"
    />
    <span
      class="_checkbox__control_8d7086"
    >
      <svg
        class="_checkbox__svg_8d7086"
        fill="currentColor"
        height="20"
        stroke-width="0"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.723 6.237a.94.94 0 0 1 .053 1.277l-5.366 6.193a.834.834 0 0 1-.611.293.83.83 0 0 1-.622-.264l-2.927-3.097a.94.94 0 0 1 0-1.278.82.82 0 0 1 1.207 0l2.297 2.43 4.763-5.498a.821.821 0 0 1 1.206-.056Z"
        />
      </svg>
    </span>
    <div
      class="_checkbox__text_8d7086"
    >
      Checkbox
    </div>
  </label>
</div>
`;
